// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExploreMenu Component applies active class to the selected category 1`] = `
<DocumentFragment>
  <div
    class="explore-menu"
    id="explore-menu"
  >
    <h1>
      Explore our menu
    </h1>
    <p
      class="explore-menu-text"
    >
      Choose from a diverse menu featuring a delectable array of dishes. Our mission is to satisfy your cravings and elevate your dining experience, one delicious meal at a time.
    </p>
    <div
      class="explore-menu-list"
    >
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Salad"
          class="active"
          src="test-file-stub"
        />
        <p>
          Salad
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Rolls"
          class=""
          src="test-file-stub"
        />
        <p>
          Rolls
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Deserts"
          class=""
          src="test-file-stub"
        />
        <p>
          Deserts
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Sandwich"
          class=""
          src="test-file-stub"
        />
        <p>
          Sandwich
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Cake"
          class=""
          src="test-file-stub"
        />
        <p>
          Cake
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Pure Veg"
          class=""
          src="test-file-stub"
        />
        <p>
          Pure Veg
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Pasta"
          class=""
          src="test-file-stub"
        />
        <p>
          Pasta
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Noodles"
          class=""
          src="test-file-stub"
        />
        <p>
          Noodles
        </p>
      </div>
    </div>
    <hr />
  </div>
</DocumentFragment>
`;

exports[`ExploreMenu Component removes active class when clicking the same category (toggles to "All") 1`] = `
<DocumentFragment>
  <div
    class="explore-menu"
    id="explore-menu"
  >
    <h1>
      Explore our menu
    </h1>
    <p
      class="explore-menu-text"
    >
      Choose from a diverse menu featuring a delectable array of dishes. Our mission is to satisfy your cravings and elevate your dining experience, one delicious meal at a time.
    </p>
    <div
      class="explore-menu-list"
    >
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Salad"
          class="active"
          src="test-file-stub"
        />
        <p>
          Salad
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Rolls"
          class=""
          src="test-file-stub"
        />
        <p>
          Rolls
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Deserts"
          class=""
          src="test-file-stub"
        />
        <p>
          Deserts
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Sandwich"
          class=""
          src="test-file-stub"
        />
        <p>
          Sandwich
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Cake"
          class=""
          src="test-file-stub"
        />
        <p>
          Cake
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Pure Veg"
          class=""
          src="test-file-stub"
        />
        <p>
          Pure Veg
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Pasta"
          class=""
          src="test-file-stub"
        />
        <p>
          Pasta
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Noodles"
          class=""
          src="test-file-stub"
        />
        <p>
          Noodles
        </p>
      </div>
    </div>
    <hr />
  </div>
</DocumentFragment>
`;

exports[`ExploreMenu Component renders the component with menu items 1`] = `
<DocumentFragment>
  <div
    class="explore-menu"
    id="explore-menu"
  >
    <h1>
      Explore our menu
    </h1>
    <p
      class="explore-menu-text"
    >
      Choose from a diverse menu featuring a delectable array of dishes. Our mission is to satisfy your cravings and elevate your dining experience, one delicious meal at a time.
    </p>
    <div
      class="explore-menu-list"
    >
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Salad"
          class=""
          src="test-file-stub"
        />
        <p>
          Salad
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Rolls"
          class=""
          src="test-file-stub"
        />
        <p>
          Rolls
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Deserts"
          class=""
          src="test-file-stub"
        />
        <p>
          Deserts
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Sandwich"
          class=""
          src="test-file-stub"
        />
        <p>
          Sandwich
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Cake"
          class=""
          src="test-file-stub"
        />
        <p>
          Cake
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Pure Veg"
          class=""
          src="test-file-stub"
        />
        <p>
          Pure Veg
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Pasta"
          class=""
          src="test-file-stub"
        />
        <p>
          Pasta
        </p>
      </div>
      <div
        class="explore-menu-list-item"
      >
        <img
          alt="Noodles"
          class=""
          src="test-file-stub"
        />
        <p>
          Noodles
        </p>
      </div>
    </div>
    <hr />
  </div>
</DocumentFragment>
`;
